Arrumando os arquivos

--- a/a1/exemplo.html
+++ b/a1/exemplo.html
@@ -9,7 +9,10 @@
 
 </head>
 <body>
-
+    <p> Oi mundo</p>
+    <p> Hello world</p>
+    <p> hola mundo</p>
+    <p> salut le monde</p>
     <script src="exemplo.js"> 
     </script>
     
