--- a/a2/aula.html
+++ b/a2/aula.html
@@ -1,7 +1,17 @@
-- Introdução
-    -O que é o d3.js
-    
-    - Como inicia o primeiro projeot ocm o d3.js
+
+# Aula 2 (A2)
+- D3.js (seletor) (seletores do javascript) (seletor do d3.js)
+-selecionando elementos do dom.
+var paragraphs = document.getElementsByTagName("p");
+for (var i = 0; i < paragraphs.length; i++) {
+var paragraph = paragraphs.item(i);
+paragraph.style.setProperty("color", "blue", null);
+}
+D3 employs a declarative approach, operating on arbitrary sets of nodes called selections. For example, you can rewrite the above loop as:
+
+- Como inicia o primeiro projeot ocm o d3.js
+
+
 
 A bibliote pode ser encontrada
 https://d3js.org/
