--- a/a2/exemplo.html
+++ b/a2/exemplo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+    <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,9 +9,13 @@
 
 </head>
 <body>
-
-    <svg></svg>
-
+    <div>
+        <p> Oi mundo</p>
+        <p> Hello world</p>
+        <p> hola mundo</p>
+        <p> salut le monde</p>
+        
+    </div>
     <script src="exemplo.js"> 
     </script>
     
