--- a/a5/index.html
+++ b/a5/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="https://d3js.org/d3.v5.min.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.11.0/d3.js" integrity="sha256-cWwi30eyRTyVagkLLAwXp92jxARPpGH3u+5Vr0UJtGQ=" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.4.9/d3.js" integrity="sha256-EpSU97FL+1g6e4piF/9ThAzIC5e7lyNTo59NXj7OXjE=" crossorigin="anonymous"></script> -->
 </head>
 <body>
     <svg></svg>
