Finalmente entendo o D3.js e criando a estrutura dos tutoriais

--- a/a3/aula.html
+++ b/a3/aula.html
@@ -1,7 +1,8 @@
 sets of nodes called selections
 selections 
 
-# Aula 3 (A3) (unindo dados com elementos )
+
+# Aula 3 (A3)
 - D3.js (como funciona o d3.j2)
     - como funciona a biblioteca (classicador enter)
     - D3.js entendendo o EXIT
