--- a/a3/exemplo.html
+++ b/a3/exemplo.html
@@ -10,7 +10,9 @@
 </head>
 <body>
 
-    <div id="elemento_a_ser_selecionado"></div>
+    <div id="elemento_a_ser_selecionado">
+        
+    </div>
 
     <script src="exemplo.js"> 
     </script>
