--- a/a5/aula.html
+++ b/a5/aula.html
@@ -1,1 +1,6 @@
-https://vizhub.com/curran/7f4137a77b564607ae2791ab1e49cf7e
+
+<!-- faca uma bar chart -->
+# Aula 5 (A5)
+- Projeto 1 (bar chart)
+    - Criando nossa primeira vizualização usando o d3.js (bar chart)
+exemplo 
