--- a/a7/aula.html
+++ b/a7/aula.html
@@ -1,3 +1,4 @@
-vizualizacao CSV,
+// vizualizando os dados de uma tabela.
+# aula 7
+    - abrindo documentos
 
-https://www.github.com/alohia/basket_shots/
