--- a/a1/aula.html
+++ b/a1/aula.html
@@ -1,7 +1,9 @@
+# Aula 1 (A1)
 - Introdução
     -O que é o d3.js
-    D3.js is a JavaScript library for manipulating documents based on data. D3 helps you bring data to life using HTML, SVG, and CSS. D3’s emphasis on web standards gives you the full capabilities of modern browsers without tying yourself to a proprietary framework, combining powerful visualization components and a data-driven approach to DOM manipulation.
-    https://d3js.org/
+    
+    - Como inicia o primeiro projeot ocm o d3.js
+
    
 
     D3 allows you to bind arbitrary data to a Document Object Model (DOM), and then apply data-driven transformations to the document. For example, you can use D3 to generate an HTML table from an array of numbers. Or, use the same data to create an interactive SVG bar chart with smooth transitions and interaction.
