--- a/a4/aula.html
+++ b/a4/aula.html
@@ -1,22 +1,2 @@
-sets of nodes called selections
-selections 
-
-# Aula 3 (A3) (unindo dados com elementos )
-- D3.js (como funciona o d3.j2)
-    - como funciona a biblioteca (classicador enter)
-    - D3.js entendendo o EXIT
-    - D3.JS entendo o classificado update.
-
-
-    When data is bound to a selection, each element in the data array is paired with the corresponding node in the selection. If there are fewer nodes than data, the extra data elements form the enter selection, which you can instantiate by appending to the enter selection. 
-    
-# conjunto enter
-O que é o conjunto enter. Quando existir um dado porém ele não possuir um elmento html referenciado esse conjunto dados, elemento html será classificado para ser modificado pela seleção enter.
-
-
-
-
-
-
-A bibliote pode ser encontrada
-https://d3js.org/
+# Aula 4 (a4)
+    - aprendendo sobre o svg
